# src_platform_clip-lib

./: AUTHORS  CHANGELOG  Makefile.am  Makefile.in  README.md  clip.pc.in  configure  configure.in
debian/: changelog  control  copyright  rules
docs/: Makefile.am  Makefile.in  doxyfile_html
src/: Makefile.am  Makefile.in  clip-capability.c  clip-passwd.c  clip-socket.c  clip-unistd.c  clip.h
test/: Makefile  test_cap.c  test_common.h  test_prelude.h  test_priv.c  test_sock_read.c
